adding error handling

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URI="mongodb+srv://deonrich:deonandsami125@cluster0.jqzvl1v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+KEY_PATH="../crcentro.com.cert/private.key"
+CERT_PATH="../crcentro.com.cert/certificate.crt"
