--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start:dev": "MODE=development node --env-file=.env server.js",
+    "start:dev": "PORT=5000 MODE=development node --env-file=.env server.js",
     "start:prod": "PORT=443 MODE=production node --env-file=.env server.js",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production",
